@@ -1,3 +1,5 @@
+2005/9/22 -- released version 20050922_trunk
+
 2005/9/21 -- released version 20050921_trunk
 
 2005/9/20 -- released version 20050920_trunk
